# ironfish-frost

./: .gitignore  Cargo.toml  README.md
.github/workflows/: ci.yml
ci/: lintHeaders.sh
src/: checksum.rs  dkg.rs  error.rs  errors.rs  keys.rs  lib.rs  multienc.rs  nonces.rs  participant.rs  samples.rs  serde.rs  signature_share.rs  signing_commitment.rs
src/dkg/: error.rs  group_key.rs  mod.rs  round1.rs  round2.rs  round3.rs  utils.rs
