[package]
name = "ironfish-frost"
version = "0.1.0"
license = "MPL-2.0"
edition = "2021"

authors = ["Iron Fish <contact@ironfish.network> (https://ironfish.network)"]
homepage = "https://ironfish.network/"
repository = "https://github.com/iron-fish/ironfish-frost"

[dependencies]
blake3 = { version = "1.5.0", optional = true }
chacha20 = "0.9.1"
chacha20poly1305 = "0.10.1"
ed25519-dalek = { version = "2.1.0", features = ["rand_core", "alloc"], default-features = false }
rand_chacha = { version = "0.3.1", optional = true, default-features = false }
rand_core = { version = "0.6.4", features = ["alloc"], default-features = false }
reddsa = { git = "https://github.com/iron-fish/reddsa.git", branch = "main",  features = ["frost", "alloc"], default-features = false }
frost-core = { git = "https://github.com/ZcashFoundation/frost.git", rev = "c6c3f2f", package = "frost-core", features = ["serialization", "serde", "cheater-detection"], default-features = false }
frost-rerandomized = { git = "https://github.com/ZcashFoundation/frost.git", rev = "c6c3f2f", package = "frost-rerandomized", features = ["serialization", "cheater-detection"], default-features = false }
siphasher = { version = "1.0.0", default-features = false }
x25519-dalek = { version = "2.0.0", features = ["reusable_secrets", "static_secrets", "getrandom"], default-features = false }

[dev-dependencies]
hex-literal = "0.4.1"
rand = "0.8.5"

[features]
default = ["dkg","signing"]

std = []
signing = ["dep:blake3", "dep:rand_chacha", "std"]
dkg = []
