[package]
name = "ironfish-frost"
version = "0.1.0"
license = "MPL-2.0"
edition = "2021"

authors = ["Iron Fish <contact@ironfish.network> (https://ironfish.network)"]
homepage = "https://ironfish.network/"
repository = "https://github.com/iron-fish/ironfish-frost"

[dependencies]
blake3 = { version = "1.5.0", optional = true, default-features = false }
chacha20 = "0.9.1"
chacha20poly1305 = "0.10.1"
ed25519-dalek = { version = "2.1.0", default-features = false, features = ["rand_core", "alloc"] }
rand_chacha = { version = "0.3.1", optional = true, default-features = false }
rand_core = { version = "0.6.4", default-features = false, features = ["alloc"] }
reddsa = { git = "https://github.com/ZcashFoundation/reddsa.git", rev="ed49e9ca0699a6450f6d4a9fe62ff168f5ea1ead", features = ["frost"], default-features = false }
siphasher = { version = "1.0.0", default-features = false }
x25519-dalek = { version = "2.0.0", default-features = false, features = ["reusable_secrets", "static_secrets"] }

[dev-dependencies]
hex-literal = "0.4.1"
rand = "0.8.5"

[features]
default = ["dkg", "signing"]

std = ["reddsa/std"]
signing = ["dep:blake3", "dep:rand_chacha"]
dkg = []
